added enlarge image

--- a/app/src/main/res/layout/fragment_view_full_screen.xml
+++ b/app/src/main/res/layout/fragment_view_full_screen.xml
@@ -3,15 +3,30 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/fifty_black">
+    android:background="@color/pure_black"
+    android:clickable="true">
 
-    <com.linute.linute.UtilsAndHelpers.VideoClasses.TextureVideoView
-        android:id="@+id/video"
+    <FrameLayout
+        android:id="@+id/video_parent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clickable="true">
+
+        <com.linute.linute.UtilsAndHelpers.VideoClasses.TextureVideoView
+            android:id="@+id/video"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:background="@color/fifty_black"/>
+    </FrameLayout>
+
+    <ImageView
+        android:id="@+id/play"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
         android:layout_gravity="center"
-        android:background="@color/fifty_black"
-    />
+        android:src="@drawable/ic_cinema"
+        android:visibility="gone"/>
 
     <ImageView
         android:id="@+id/imageView"
@@ -19,7 +34,18 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:adjustViewBounds="true"
-        android:background="@color/fifty_black"/>
+        android:background="@color/fifty_black"
+        android:clickable="true"/>
+
+    <TextView
+        android:id="@+id/loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="loading..."
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:visibility="gone"/>
 
 
 </FrameLayout>
