--- a/app/src/main/res/layout/fragment_need_permissions.xml
+++ b/app/src/main/res/layout/fragment_need_permissions.xml
@@ -40,6 +40,15 @@
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="16sp"/>
 
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/half_margin"
+        android:text="Or you can post a status."
+        android:textColor="@color/fifty_white"
+    />
+
     <FrameLayout
         android:id="@+id/new_post"
         android:layout_width="wrap_content"
