--- a/app/src/main/res/layout/fragment_profile_header3.xml
+++ b/app/src/main/res/layout/fragment_profile_header3.xml
@@ -1,33 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:background="@color/colorPrimary"
-              android:orientation="vertical"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/colorPrimary"
+    android:orientation="vertical"
 >
 
-
-    <com.linute.linute.SquareCamera.SquareImageView android:id="@+id/profile_image"
-                                                    android:layout_width="match_parent"
-                                                    android:layout_height="match_parent"
-                                                    android:background="@color/white"
-                                                    tools:src="@color/feed_action_bar_grey"
+    <com.linute.linute.SquareCamera.SquareImageView
+        android:id="@+id/profile_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        tools:src="@color/feed_action_bar_grey"
     />
 
-
-    <!--<LinearLayout android:layout_width="wrap_content"-->
-    <!--android:layout_height="56dp"-->
-    <!--android:layout_gravity="end"-->
-    <!--android:layout_marginTop="-28dp"-->
-    <!--&gt;-->
-
-    <!--<android.support.design.widget.FloatingActionButton android:id="@+id/chat_button"-->
-    <!--android:layout_width="56dp"-->
-    <!--android:layout_height="56dp"-->
-    <!--android:layout_marginEnd="@dimen/activity_horizontal_margin"-->
-    <!--android:src="@drawable/ic_action_messanger"-->
-    <!---->
-    <!--app:backgroundTint="@color/messanger_blue"/>-->
-    <!--</LinearLayout>-->
 </LinearLayout>
