--- a/app/src/main/res/layout/square_camera_edit_save_video.xml
+++ b/app/src/main/res/layout/square_camera_edit_save_video.xml
@@ -72,6 +72,10 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"
+                android:shadowColor="@color/pure_black"
+                android:shadowDx="-2.0"
+                android:shadowDy="2.0"
+                android:shadowRadius="1.3"
                 android:text="anon\ncomments"
                 android:textColor="@color/pure_white"
                 android:textSize="12sp"
@@ -110,6 +114,10 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"
+                android:shadowColor="@color/pure_black"
+                android:shadowDx="-2.0"
+                android:shadowDy="2.0"
+                android:shadowRadius="1.3"
                 android:text="post\nas"
                 android:textColor="@color/pure_white"
                 android:textSize="12sp"
@@ -129,7 +137,8 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/top"
         android:layout_width="match_parent"
-        android:layout_height="?android:attr/actionBarSize">
+        android:layout_height="?android:attr/actionBarSize"
+    >
 
         <com.linute.linute.UtilsAndHelpers.SquareFrameLayout
             android:layout_width="wrap_content"
