--- a/app/src/main/res/layout/square_camera_take_photo.xml
+++ b/app/src/main/res/layout/square_camera_take_photo.xml
@@ -7,6 +7,7 @@
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
+
     <com.linute.linute.SquareCamera.CustomCameraPreview
         android:id="@+id/camera_preview_view"
         android:layout_width="match_parent"
@@ -99,6 +100,13 @@
         </android.support.v7.widget.Toolbar>
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/focus"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:src="@drawable/focus_circle"
+        android:visibility="gone"
+    />
 
     <!--bottom buttons-->
     <FrameLayout
@@ -168,6 +176,6 @@
 
 
         </FrameLayout>
-
     </FrameLayout>
+
 </FrameLayout>
