--- a/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
+++ b/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
@@ -57,7 +57,8 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/top"
         android:layout_width="match_parent"
-        android:layout_height="?android:attr/actionBarSize">
+        android:layout_height="?android:attr/actionBarSize"
+    >
 
         <com.linute.linute.UtilsAndHelpers.SquareFrameLayout
             android:layout_width="wrap_content"
@@ -103,6 +104,10 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"
+                android:shadowColor="@color/pure_black"
+                android:shadowDx="-2.0"
+                android:shadowDy="2.0"
+                android:shadowRadius="1.3"
                 android:text="anon\ncomments"
                 android:textColor="@color/pure_white"
                 android:textSize="12sp"
@@ -132,6 +137,10 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"
+                android:shadowColor="@color/pure_black"
+                android:shadowDx="-2.0"
+                android:shadowDy="2.0"
+                android:shadowRadius="1.3"
                 android:text="post\nas"
                 android:textColor="@color/pure_white"
                 android:textSize="12sp"
