--- a/app/src/main/res/layout/fragment_global_choices.xml
+++ b/app/src/main/res/layout/fragment_global_choices.xml
@@ -17,7 +17,7 @@
                                            android:layout_height="?attr/actionBarSize"
                                            android:background="@color/colorPrimary"
                                            app:layout_scrollFlags="scroll|enterAlways|snap"
-                                           app:title="Trending"
+                                           app:title="Globally Trending"
                                            app:titleTextColor="@color/pure_white"
         />
 
