--- a/app/src/main/res/layout/fragment_find_friends.xml
+++ b/app/src/main/res/layout/fragment_find_friends.xml
@@ -10,10 +10,9 @@
     <TextView android:id="@+id/findFriends_text"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:layout_gravity="center_horizontal"
+              android:layout_gravity="center"
               android:layout_marginEnd="64dp"
               android:layout_marginStart="64dp"
-              android:gravity="center"
               android:text="No results found"
               android:textSize="18sp"
               android:visibility="gone"
