--- a/app/src/main/res/layout/fragment_view_full_screen.xml
+++ b/app/src/main/res/layout/fragment_view_full_screen.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
+    android:id="@+id/parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/pure_black"
-    android:clickable="true">
+    android:fitsSystemWindows="true">
 
     <FrameLayout
         android:id="@+id/video_parent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clickable="true">
+        android:layout_height="match_parent">
 
         <com.linute.linute.UtilsAndHelpers.VideoClasses.TextureVideoView
             android:id="@+id/video"
@@ -46,6 +46,11 @@
         android:textColor="@color/white"
         android:textSize="20sp"
         android:visibility="gone"/>
+
+    <View
+        android:id="@+id/touch_layer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 
 </FrameLayout>
