--- a/app/src/main/res/layout/square_camera_edit_save_video.xml
+++ b/app/src/main/res/layout/square_camera_edit_save_video.xml
@@ -1,21 +1,20 @@
 <FrameLayout
+    android:id="@+id/parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    android:focusableInTouchMode="true"
     android:keepScreenOn="true">
 
     <FrameLayout
         android:id="@+id/text_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:focusableInTouchMode="true">
+        android:layout_gravity="center">
 
         <com.linute.linute.UtilsAndHelpers.VideoClasses.TextureVideoView
             android:id="@+id/video_frame"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"/>
 
