--- a/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
+++ b/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
@@ -1,16 +1,15 @@
 <FrameLayout
+    android:id="@+id/parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    android:focusableInTouchMode="true">
+    android:background="@color/colorPrimary">
 
     <FrameLayout
         android:id="@+id/frame"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:focusableInTouchMode="true">
+        android:layout_gravity="center">
 
         <com.linute.linute.UtilsAndHelpers.MinimumWidthImageView
             android:id="@+id/photo"
