--- a/app/src/main/res/menu/my_profile_action_bar.xml
+++ b/app/src/main/res/menu/my_profile_action_bar.xml
@@ -9,11 +9,11 @@
           android:icon="@drawable/ic_action_action_settings"
           app:showAsAction="ifRoom"
     />
-    <item android:id="@+id/updates"
-        android:orderInCategory="1"
+    <item android:id="@+id/menu_updates"
+        app:actionLayout="@layout/toolbar_updates_icon"
+        android:orderInCategory="101"
         android:title="Updates"
         android:icon="@drawable/ic_action_turn20"
         app:showAsAction="always"/>
-
 
 </menu>
