fixed full screen

--- a/app/src/main/res/layout/fragment_view_full_screen.xml
+++ b/app/src/main/res/layout/fragment_view_full_screen.xml
@@ -2,6 +2,7 @@
 <FrameLayout
     android:id="@+id/parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/pure_black"
@@ -12,11 +13,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.linute.linute.UtilsAndHelpers.VideoClasses.TextureVideoView
+        <com.linute.linute.UtilsAndHelpers.VideoClasses.ScalableVideoView
             android:id="@+id/video"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            app:scalableType="fitCenter"
             android:background="@color/fifty_black"/>
     </FrameLayout>
 
