--- a/app/src/main/res/menu/main_activity_drawer.xml
+++ b/app/src/main/res/menu/main_activity_drawer.xml
@@ -18,10 +18,10 @@
             android:checkable="true"
             app:actionLayout="@layout/main_activity_nav_action_counter"/>
         <item
-            android:id="@+id/navigation_item_activity"
-            android:icon="@drawable/ic_action_turn20"
-            android:title="Updates"
-            android:checkable="true"
+            android:id="@+id/navigation_item_find_friends"
+            android:icon="@drawable/ic_action_add"
+            android:title="Find Friends"
+            android:checkable="false"
             app:actionLayout="@layout/main_activity_nav_action_counter"/>
 
     </group>
