videos are now centercropped

--- a/app/src/main/res/layout/square_camera_edit_save_video.xml
+++ b/app/src/main/res/layout/square_camera_edit_save_video.xml
@@ -1,6 +1,7 @@
 <FrameLayout
     android:id="@+id/parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
@@ -12,11 +13,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center">
 
-        <com.linute.linute.UtilsAndHelpers.VideoClasses.TextureVideoView
+        <com.linute.linute.UtilsAndHelpers.VideoClasses.ScalableVideoView
             android:id="@+id/video_frame"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            app:scalableType="fitCenter"/>
 
         <com.linute.linute.UtilsAndHelpers.NoSuggestionsTextView
             android:id="@+id/textView"
