--- a/app/src/main/res/layout/trending_item.xml
+++ b/app/src/main/res/layout/trending_item.xml
@@ -8,14 +8,14 @@
     <com.linute.linute.SquareCamera.SquareImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"/>
 
     <LinearLayout
         android:id="@+id/topPanel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/downside_gradient"
-    >
+        android:background="@drawable/downside_gradient">
 
         <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/profile_image"
