--- a/app/src/main/res/layout/trending_item_video.xml
+++ b/app/src/main/res/layout/trending_item_video.xml
@@ -5,19 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.linute.linute.UtilsAndHelpers.VideoClasses.SquareVideoView
-        android:id="@+id/video"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:visibility="gone"
-    />
-
     <com.linute.linute.SquareCamera.SquareImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"/>
 
+    <com.linute.linute.UtilsAndHelpers.VideoClasses.ScalableVideoView
+        android:id="@+id/video"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        app:scalableType="centerCrop"
+    />
 
     <LinearLayout
         android:id="@+id/topPanel"
