--- a/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
+++ b/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
@@ -19,7 +19,11 @@
             android:adjustViewBounds="true"
             android:background="@color/pure_black"
             android:scaleType="fitCenter"/>
-
+        <android.support.v4.view.ViewPager
+            android:id="@+id/filter_overlay"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
         <com.linute.linute.UtilsAndHelpers.NoSuggestionsTextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
@@ -33,8 +37,10 @@
             android:textColor="@android:color/white"
             android:textSize="14sp"
             android:visibility="gone"
-        />
+            />
     </FrameLayout>
+
+
 
 
     <com.linute.linute.UtilsAndHelpers.CustomBackPressedEditText
