--- a/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
+++ b/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
@@ -19,11 +19,10 @@
             android:adjustViewBounds="true"
             android:background="@color/pure_black"
             android:scaleType="fitCenter"/>
-        <android.support.v4.view.ViewPager
+        <com.linute.linute.SquareCamera.overlay.WipeViewPager
             android:id="@+id/filter_overlay"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
+            android:layout_height="match_parent"/>
         <com.linute.linute.UtilsAndHelpers.NoSuggestionsTextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
