added sticker drawer and manipulating stickers

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -63,6 +63,9 @@
     <dimen name="grid_layout_sep_margin">8dp</dimen>
 
 
+    <dimen name="sticker_size">128dp</dimen>
+
+
     <!--- snackbar
     -->
 
