--- a/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
+++ b/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
@@ -23,6 +23,12 @@
             android:id="@+id/filter_overlay"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
+        <android.support.design.widget.CoordinatorLayout
+            android:id="@+id/stickers_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <!--Trash Can for deleting -->
+        </android.support.design.widget.CoordinatorLayout>
         <com.linute.linute.UtilsAndHelpers.NoSuggestionsTextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
@@ -59,36 +65,6 @@
         android:visibility="gone"
     />
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/top"
-        android:layout_width="match_parent"
-        android:layout_height="?android:attr/actionBarSize"
-    >
-
-        <com.linute.linute.UtilsAndHelpers.SquareFrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical|end"
-            android:layout_marginEnd="16dp">
-
-            <ImageButton
-                android:id="@+id/save_photo"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@android:color/transparent"
-                android:foreground="?selectableItemBackgroundBorderless"
-                android:src="@drawable/ic_action_check83"/>
-
-            <ProgressBar
-                android:id="@+id/editFragment_progress_bar"
-                style="?android:attr/progressBarStyleSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:visibility="gone"/>
-
-        </com.linute.linute.UtilsAndHelpers.SquareFrameLayout>
-    </android.support.v7.widget.Toolbar>
 
     <FrameLayout
         android:id="@+id/bottom"
@@ -160,5 +136,52 @@
             />
         </LinearLayout>
     </FrameLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/sticker_drawer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:background="#CC000000"
+        />
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/top"
+        android:layout_width="match_parent"
+        android:layout_height="?android:attr/actionBarSize"
+        >
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_fire_off"
+            android:id="@+id/sticker_drawer_handle" />
+
+        <com.linute.linute.UtilsAndHelpers.SquareFrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical|end"
+            android:layout_marginEnd="16dp">
+
+            <ImageButton
+                android:id="@+id/save_photo"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/transparent"
+                android:foreground="?selectableItemBackgroundBorderless"
+                android:src="@drawable/ic_action_check83"/>
+
+            <ProgressBar
+                android:id="@+id/editFragment_progress_bar"
+                style="?android:attr/progressBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone"/>
+
+        </com.linute.linute.UtilsAndHelpers.SquareFrameLayout>
+    </android.support.v7.widget.Toolbar>
+
+
 
 </FrameLayout>
