--- a/app/src/main/res/layout/load_more_footer.xml
+++ b/app/src/main/res/layout/load_more_footer.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
 >
 
 
-    <ProgressBar android:id="@+id/updateFragment_progress_bar"
-                 style="?android:attr/progressBarStyleSmall"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:layout_gravity="center"
-                 android:layout_margin="@dimen/activity_horizontal_margin"/>
+    <ProgressBar
+        android:id="@+id/updateFragment_progress_bar"
+        style="?android:attr/progressBarStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/activity_horizontal_margin"/>
 
-    <Button android:id="@+id/updatesFragment_reload_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="@dimen/half_margin"
-            android:text="Reload"
-            android:visibility="gone"/>
+    <Button
+        android:id="@+id/updatesFragment_reload_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/half_margin"
+        android:text="Reload"
+        android:visibility="gone"/>
 
 </FrameLayout>
