--- a/app/src/main/res/layout/profile_grid_item_2.xml
+++ b/app/src/main/res/layout/profile_grid_item_2.xml
@@ -8,39 +8,43 @@
     android:layout_margin="4dp"
 >
 
-    <com.makeramen.roundedimageview.RoundedImageView android:id="@+id/profile_grid_item_image"
-                                                     android:layout_width="match_parent"
-                                                     android:layout_height="match_parent"
-                                                     android:foreground="?android:selectableItemBackground"
-                                                     android:scaleType="centerCrop"
-                                                     app:riv_corner_radius="@dimen/post_create_corner_radius"
-                                                     tools:src="@drawable/image_loading_background"
+    <ImageView
+        android:id="@+id/profile_grid_item_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:foreground="?android:selectableItemBackground"
+        android:scaleType="centerCrop"
+        app:riv_corner_radius="@dimen/post_create_corner_radius"
+        tools:src="@drawable/image_loading_background"
     />
 
-    <View android:id="@+id/gradient"
-          android:layout_width="match_parent"
-          android:layout_height="30dp"
-          android:background="@drawable/anon_gradient"
-          android:visibility="gone"
+    <View
+        android:id="@+id/gradient"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:background="@drawable/anon_gradient"
+        android:visibility="gone"
     />
 
-    <ImageView android:id="@+id/anon_icon"
-               android:layout_width="20dp"
-               android:layout_height="20dp"
-               android:layout_margin="4dp"
-               android:scaleType="centerInside"
-               android:src="@drawable/ic_anon_white"
-               android:visibility="gone"
+    <ImageView
+        android:id="@+id/anon_icon"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_margin="4dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_anon_white"
+        android:visibility="gone"
     />
 
-    <ImageView android:id="@+id/movie_icon"
-               android:layout_width="32dp"
-               android:layout_height="32dp"
-               android:layout_margin="4dp"
-               android:scaleType="centerInside"
-               android:layout_gravity="center"
-               android:src="@drawable/ic_cinema"
-               android:visibility="gone"
+    <ImageView
+        android:id="@+id/movie_icon"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_gravity="center"
+        android:layout_margin="4dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_cinema"
+        android:visibility="gone"
     />
 
 
