--- a/app/src/main/res/layout/profile_grid_item_no_image.xml
+++ b/app/src/main/res/layout/profile_grid_item_no_image.xml
@@ -5,25 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <View android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:background="@drawable/profile_item_no_image"
-          android:layout_margin="4dp"
-          android:foreground="?android:selectableItemBackground"
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="4dp"
+        android:background="@color/post_color_0"
+        android:foreground="?android:selectableItemBackground"
     />
 
-    <TextView android:id="@+id/profile_grid_item_no_image_text"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:layout_marginBottom="16dp"
-              android:layout_marginEnd="8dp"
-              android:layout_marginStart="8dp"
-              android:layout_marginTop="16dp"
-              android:gravity="center_vertical"
-              android:maxLines="8"
-              android:textColor="#FFFFFF"
-              android:textSize="12sp"
-              android:textStyle="italic"
+    <TextView
+        android:id="@+id/profile_grid_item_no_image_text"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:gravity="center_vertical"
+        android:maxLines="8"
+        android:textColor="#FFFFFF"
+        android:textSize="12sp"
+        android:textStyle="italic"
     />
 
 
