--- a/app/src/main/res/layout/fragment_feed_detail_page_list_item.xml
+++ b/app/src/main/res/layout/fragment_feed_detail_page_list_item.xml
@@ -1,70 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
+<com.daimajia.swipe.SwipeLayout
+    android:id="@+id/comment_swipe_layout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:leftEdgeSwipeOffset="0dp"
+    app:rightEdgeSwipeOffset="0dp">
 
 
-<com.daimajia.swipe.SwipeLayout android:id="@+id/comment_swipe_layout"
-                                xmlns:android="http://schemas.android.com/apk/res/android"
-                                xmlns:app="http://schemas.android.com/apk/res-auto"
-                                xmlns:tools="http://schemas.android.com/tools"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                app:leftEdgeSwipeOffset="0dp"
-                                app:rightEdgeSwipeOffset="0dp">
+    <!--left_controls right now is only like button so i won't give it a parent
+        left_controls == like_button-->
+    <FrameLayout
+        android:id="@+id/left_controls"
+        android:layout_width="60dp"
+        android:layout_height="match_parent"
+        android:background="@android:color/holo_red_light">
 
-    <LinearLayout android:id="@+id/comment_bottom_wrapper"
-                  android:layout_width="wrap_content"
-                  android:layout_height="match_parent"
-                  android:orientation="horizontal"
-    >
+        <ImageView
+            android:id="@+id/like"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_fire_off"
+        />
 
-        <FrameLayout android:id="@+id/comment_delete"
-                     android:layout_width="60dp"
-                     android:layout_height="match_parent"
-                     android:background="#c8c7cd"
-        >
+    </FrameLayout>
 
-            <ImageView android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"
-                       android:layout_gravity="center"
-                       android:src="@drawable/ic_action_delete"
+    <LinearLayout
+        android:id="@+id/right_controls"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <FrameLayout
+            android:id="@+id/comment_delete"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:background="#c8c7cd">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_action_delete"
             />
 
         </FrameLayout>
 
-        <FrameLayout android:id="@+id/comment_reveal"
-                     android:layout_width="60dp"
-                     android:layout_height="match_parent"
-                     android:background="#5ccdc9">
+        <FrameLayout
+            android:id="@+id/comment_reveal"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:background="#5ccdc9">
 
-            <ImageView android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"
-                       android:layout_gravity="center"
-                       android:src="@drawable/ic_action_reveal"
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_action_reveal"
             />
 
         </FrameLayout>
 
-        <FrameLayout android:id="@+id/comment_report"
-                     android:layout_width="60dp"
-                     android:layout_height="match_parent"
-                     android:background="#ff9000">
+        <FrameLayout
+            android:id="@+id/comment_report"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:background="#ff9000">
 
-            <ImageView android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"
-                       android:layout_gravity="center"
-                       android:src="@drawable/ic_action_whistle14"
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_action_whistle14"
             />
 
         </FrameLayout>
 
-        <FrameLayout android:id="@+id/comment_reply"
-                     android:layout_width="60dp"
-                     android:layout_height="match_parent"
-                     android:background="#27425a">
+        <FrameLayout
+            android:id="@+id/comment_reply"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:background="#27425a">
 
-            <ImageView android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"
-                       android:layout_gravity="center"
-                       android:src="@drawable/ic_action_reply"
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_action_reply"
             />
 
         </FrameLayout>
@@ -72,20 +97,43 @@
     </LinearLayout>
 
 
-    <LinearLayout android:id="@+id/feed_detail_main"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:background="@color/pure_white"
-                  android:orientation="horizontal">
+    <LinearLayout
+        android:id="@+id/feed_detail_main"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/pure_white"
+        android:orientation="horizontal">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/comment_user_image"
-            android:layout_width="@dimen/profile_image_radius"
-            android:layout_height="@dimen/profile_image_radius"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/activity_horizontal_margin"
-            app:civ_border_color="@color/seperator_color"
-            app:civ_border_width="1dp"
-        />
+            android:orientation="vertical"
+        >
+
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/comment_user_image"
+                android:layout_width="@dimen/profile_image_radius"
+                android:layout_height="@dimen/profile_image_radius"
+                app:civ_border_color="@color/seperator_color"
+                app:civ_border_width="1dp"
+            />
+
+            <TextView
+                android:id="@+id/num_likes"
+                android:layout_width="@dimen/profile_image_radius"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:ellipsize="marquee"
+                android:gravity="center"
+                android:lines="1"
+                android:textColor="@android:color/holo_red_light"
+                android:textSize="@dimen/sub_font_size"
+            />
+
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -95,8 +143,9 @@
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:orientation="vertical">
 
-            <LinearLayout android:layout_width="match_parent"
-                          android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/comment_user_name"
@@ -110,13 +159,14 @@
                     android:textStyle="bold"
                     tools:text="Name NameName Name"/>
 
-                <TextView android:id="@+id/comment_time_ago"
-                          android:layout_width="wrap_content"
-                          android:layout_height="wrap_content"
-                          android:layout_gravity="end"
-                          android:textColor="@color/twentyfive_black"
-                          android:textSize="@dimen/sub_font_size"
-                          tools:text="1h"
+                <TextView
+                    android:id="@+id/comment_time_ago"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:textColor="@color/twentyfive_black"
+                    android:textSize="@dimen/sub_font_size"
+                    tools:text="1h"
                 />
 
 
@@ -132,8 +182,5 @@
                 tools:text="test test test testtest test test testtest "/>
 
         </LinearLayout>
-
     </LinearLayout>
-
-
 </com.daimajia.swipe.SwipeLayout>
