--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,9 @@
     <color name="colorPrimary">#142029</color>
     <color name="secondaryColor">#67CDC9</color>
 
+
+    <color name="red">#ed5564</color>
+
     <color name="toolbar_color">#142029</color>
     <color name="colorPrimaryDark">#0f181e</color>
     <color name="colorAccent">#1d4261</color>
