--- a/app/src/main/res/layout/activity_new_post_create.xml
+++ b/app/src/main/res/layout/activity_new_post_create.xml
@@ -157,6 +157,7 @@
             android:foreground="?android:attr/selectableItemBackground">
 
             <TextView
+                android:id="@+id/selector_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
