--- a/app/src/main/res/layout/fragment_edit_status.xml
+++ b/app/src/main/res/layout/fragment_edit_status.xml
@@ -1,44 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainContent.Settings.EditNameFragment"
-    android:contextClickable="false">
+    android:layout_height="match_parent">
 
-
-    <EditText
-        android:id="@+id/editstatus_status_text"
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/activity_vertical_margin"
-        android:hint="@string/bio_hint"
-        android:inputType="textCapSentences|textMultiLine"
-        android:singleLine="false"
-        android:lines="3"
-        android:maxLength="200"
-        android:maxLines="3"
-        android:textSize="@dimen/header_font_size"/>
+        app:counterEnabled="true"
+        app:counterMaxLength="200"
+        app:counterOverflowTextAppearance="@style/TextAppearence.App.TextInputLayout"
+    >
 
-
-
-    <Button android:id="@+id/editstatus_save"
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/editstatus_status_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:text="Save Changes"/>
+            android:hint="@string/bio_hint"
+            android:inputType="textCapSentences|textMultiLine"
+            android:lines="3"
+            android:textSize="@dimen/body_font_size"
+        />
 
-    <TextView
-        android:layout_width="wrap_content"
+    </android.support.design.widget.TextInputLayout>
+
+    <Button
+        android:id="@+id/editstatus_save"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_above="@id/editstatus_save"
-        android:textColor="@color/fifty_black"
-        tools:text="200"
-        android:textSize="20sp"
-        android:padding="12dp"
-        android:id="@+id/text_char_count" />
+        android:layout_alignParentBottom="true"
+        android:text="Save Changes"/>
 
     <ProgressBar
         android:id="@+id/editstatus_progressbar"
